; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_hash.c_mv_cesa_ahmac_cra_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_hash.c_mv_cesa_ahmac_cra_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.mv_cesa_hmac_ctx = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@mv_cesa_ahash_req_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_tfm*)* @mv_cesa_ahmac_cra_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv_cesa_ahmac_cra_init(%struct.crypto_tfm* %0) #0 {
  %2 = alloca %struct.crypto_tfm*, align 8
  %3 = alloca %struct.mv_cesa_hmac_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %2, align 8
  %4 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %5 = call %struct.mv_cesa_hmac_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %4)
  store %struct.mv_cesa_hmac_ctx* %5, %struct.mv_cesa_hmac_ctx** %3, align 8
  %6 = load %struct.mv_cesa_hmac_ctx*, %struct.mv_cesa_hmac_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.mv_cesa_hmac_ctx, %struct.mv_cesa_hmac_ctx* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32* @mv_cesa_ahash_req_ops, i32** %8, align 8
  %9 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %10 = call i32 @__crypto_ahash_cast(%struct.crypto_tfm* %9)
  %11 = call i32 @crypto_ahash_set_reqsize(i32 %10, i32 4)
  ret i32 0
}

declare dso_local %struct.mv_cesa_hmac_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @crypto_ahash_set_reqsize(i32, i32) #1

declare dso_local i32 @__crypto_ahash_cast(%struct.crypto_tfm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
